# mcp-research-assistant

./: README.md  main.py  pyproject.toml
authentication-example/: client.py  server.py
example-mcp/: client.py  server.py
mcp-server-agent/: advance_agentic_client.py  agentic_client.py  math_server.py  mcp-http.json  mcp.json  weather_server.py
mcp-server-claude-desktop/: math_server.py  weather_server.py
research-assistant-mcp/: client.py  mcp.json  server.py
weather/: server.py
