[project]
name = "mcp-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.13.0.1",
    "langchain==0.3.27",
    "langchain-ollama>=0.2.0,<1.0.0",
    "mcp>=1.19.0",
    "mcp-use[search]>=1.3.11",
]
